@@ -5,10 +5,9 @@
 
 package io.opentelemetry.javaagent.instrumentation.helidon;
 
-import java.util.Arrays;
 import java.util.List;
 
-import io.helidon.webserver.http.HttpFeature;
+import io.helidon.webserver.http.Filter;
 import io.opentelemetry.api.GlobalOpenTelemetry;
 import io.opentelemetry.instrumentation.helidon.HelidonTelemetry;
 import io.opentelemetry.instrumentation.helidon.internal.HelidonInstrumenterBuilderUtil;
@@ -16,7 +15,7 @@ import io.opentelemetry.javaagent.bootstrap.internal.AgentCommonConfig;
 
 public final class HelidonSingletons {
 
-  public static final List<HttpFeature> FILTERS;
+  public static final List<Filter> FILTERS;
 
   static {
     var config = AgentCommonConfig.get();
@@ -27,7 +26,7 @@ public final class HelidonSingletons {
         .configure(config);
     var serverTelemetry = serverBuilder.build();
 
-    FILTERS = Arrays.asList(serverTelemetry, r -> r.addFilter(new ResponseCustomizingFilter()));
+    FILTERS = List.of(serverTelemetry.createFilter(), new ResponseCustomizingFilter());
   }
 
   private HelidonSingletons() {}
